add POST users, GET user API
* Add POST users api
* Add GET user api
* Update docs
* Update Swagger
